[package]
name = "nexcore-academy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic academy logic: KSB quality scoring, course validation, formatting, and pipeline stage configuration"
keywords = ["pharmacovigilance", "academy", "ksb", "quality", "validation"]
categories = ["science", "education"]

[dependencies]
nexcore-error = { workspace = true }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }
